indexes/revision-flood/log
[  7%] Building CXX object CMakeFiles/bench8dflood_default.dir/bench/bench_flood.cpp.o
/home/zengyuxiang/learnedbench/bench/bench_flood.cpp: In destructor ‘IndexSet::~IndexSet()’:
/home/zengyuxiang/learnedbench/bench/bench_flood.cpp:40:16: error: ‘bench::index::FloodOct<Dim, MaxElements, Eps, SortDim, MAX_DEPTH>::~FloodOct() [with long unsigned int Dim = 8; long unsigned int MaxElements = 128; long unsigned int Eps = 64; long unsigned int SortDim = 7; long unsigned int MAX_DEPTH = 30]’ is private within this context
   40 |         delete flood;
      |                ^~~~~
In file included from /home/zengyuxiang/learnedbench/bench/bench_flood.cpp:4:
/home/zengyuxiang/learnedbench/bench/../indexes/revision-flood/floodOct.hpp:276:1: note: declared private here
  276 | ~FloodOct() {
      | ^
/home/zengyuxiang/learnedbench/bench/bench_flood.cpp: In function ‘void build_index(IndexSet&, const string&, Points&)’:
/home/zengyuxiang/learnedbench/bench/bench_flood.cpp:48:41: error: ‘bench::index::FloodOct<Dim, MaxElements, Eps, SortDim, MAX_DEPTH>::FloodOct(bench::index::FloodOct<Dim, MaxElements, Eps, SortDim, MAX_DEPTH>::Points&) [with long unsigned int Dim = 8; long unsigned int MaxElements = 128; long unsigned int Eps = 64; long unsigned int SortDim = 7; long unsigned int MAX_DEPTH = 30; bench::index::FloodOct<Dim, MaxElements, Eps, SortDim, MAX_DEPTH>::Points = std::vector<std::array<double, 8> >]’ is private within this context
   48 |         idx_set.flood = new Flood(points);
      |                                         ^
In file included from /home/zengyuxiang/learnedbench/bench/bench_flood.cpp:4:
/home/zengyuxiang/learnedbench/bench/../indexes/revision-flood/floodOct.hpp:263:1: note: declared private here
  263 | FloodOct(Points& points) {
      | ^~~~~~~~
In file included from /home/zengyuxiang/learnedbench/bench/bench_flood.cpp:6:
/home/zengyuxiang/learnedbench/bench/query.hpp: In instantiation of ‘void bench::query::batch_range_queries(Index&, std::vector<std::pair<boost::geometry::model::box<std::array<double, Dim> >, long unsigned int> >) [with Index = bench::index::FloodOct<8, 128, 64>; long unsigned int Dim = 8]’:
/home/zengyuxiang/learnedbench/bench/bench_flood.cpp:80:46:   required from here
/home/zengyuxiang/learnedbench/bench/query.hpp:130:26: error: ‘bench::index::FloodOct<Dim, MaxElements, Eps, SortDim, MAX_DEPTH>::Points bench::index::FloodOct<Dim, MaxElements, Eps, SortDim, MAX_DEPTH>::range_query(const Box&) [with long unsigned int Dim = 8; long unsigned int MaxElements = 128; long unsigned int Eps = 64; long unsigned int SortDim = 7; long unsigned int MAX_DEPTH = 30; bench::index::FloodOct<Dim, MaxElements, Eps, SortDim, MAX_DEPTH>::Points = std::vector<std::array<double, 8> >; bench::index::FloodOct<Dim, MaxElements, Eps, SortDim, MAX_DEPTH>::Box = boost::geometry::model::box<std::array<double, 8> >]’ is private within this context
  130 |         index.range_query(box.first);
      |         ~~~~~~~~~~~~~~~~~^~~~~~~~~~~
In file included from /home/zengyuxiang/learnedbench/bench/bench_flood.cpp:4:
/home/zengyuxiang/learnedbench/bench/../indexes/revision-flood/floodOct.hpp:281:8: note: declared private here
  281 | Points range_query(const Box& box) {
      |        ^~~~~~~~~~~
In file included from /home/zengyuxiang/learnedbench/bench/bench_flood.cpp:6:
/home/zengyuxiang/learnedbench/bench/query.hpp:143:27: error: ‘size_t bench::index::FloodOct<Dim, MaxElements, Eps, SortDim, MAX_DEPTH>::count() [with long unsigned int Dim = 8; long unsigned int MaxElements = 128; long unsigned int Eps = 64; long unsigned int SortDim = 7; long unsigned int MAX_DEPTH = 30; size_t = long unsigned int]’ is private within this context
  143 |     size_t N = index.count();
      |                ~~~~~~~~~~~^~
In file included from /home/zengyuxiang/learnedbench/bench/bench_flood.cpp:4:
/home/zengyuxiang/learnedbench/bench/../indexes/revision-flood/floodOct.hpp:302:15: note: declared private here
  302 | inline size_t count() {
      |               ^~~~~
CMakeFiles/bench8dflood_default.dir/build.make:82: recipe for target 'CMakeFiles/bench8dflood_default.dir/bench/bench_flood.cpp.o' failed
make[2]: *** [CMakeFiles/bench8dflood_default.dir/bench/bench_flood.cpp.o] Error 1
CMakeFiles/Makefile2:107: recipe for target 'CMakeFiles/bench8dflood_default.dir/all' failed
make[1]: *** [CMakeFiles/bench8dflood_default.dir/all] Error 2
Makefile:103: recipe for target 'all' failed
make: *** [all] Error 2
